added js script

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
                       <label for="select">Select Size</label>
                       <select class="browser-default custom-select custom-select-md mb-3" id="size">
                         <option selected value="0">Select size here</option>
-                        <option value="Extra large">  Extra Large -- sh. 1200</option>
-                        <option value="Large">Large -- sh. 1000</option>
+                        <option value="extra-large">  Extra Large -- sh. 1200</option>
+                        <option value="large">Large -- sh. 1000</option>
                         <option value="medium">Medium -- sh. 800</option>
                         <option value="small">Small -- sh. 600</option>
                       </select>
@@ -43,7 +43,7 @@
                         <select class="browser-default custom-select custom-select-md mb-3" id="crust">
                           <option selected value="0">Select your preferred crust!</option>
                           <option value="Neopolitan">Neopolitan -- sh. 200</option>
-                          <option value="Deep pan">Deep pan -- sh. 180</option>
+                          <option value="Deeppan">Deeppan -- sh. 180</option>
                           <option value="Flatbread">Flatbread-- sh. 150</option>
                         </select>
                       <label for="Toppings">Select Your Toppings at sh. 40 each</label><br>
@@ -115,7 +115,7 @@
                         <form action="">
                           <div class="form-group">
                             <input type="text" id="name" class="form-control mb-3" placeholder="Name">
-                            <input type="number" id="phone" class="form-control mb-3" placeholder="Pnone Number">
+                            <input type="number" id="phone" class="form-control mb-3" placeholder="Ph one Number">
                             <input type="text" id="location" class="form-control mb-3" placeholder="Location for delivery">
                             <button class="btn btn-orange" id="final-order">Place Order</button>
                           </div>
