--- a/index.html
+++ b/index.html
@@ -1,103 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-144351462-1"></script>
-  <script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-144351462-1');
 </script>
-
-    <!---<meta charset="UTF-8">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <title>PIZZA PALACE</title>
+    <link href="https://fonts.googleapis.com/css?family=Arima+Madurai|Cormorant|Eczar|El+Messiri|Itim|Sancreek|Wallpoet&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/mdb.min.css"> 
     <link rel="stylesheet" href="./css/bootstrap.css">
     <link rel="stylesheet" href="./css/styles.css">
+
 </head>
 <body>
-    <h1>John's Pizza palace</h1>
-
-        <div class="container-fluid order" id="make-order">
-            <div class="order-overlay"> 
-              <div class="controls-top text-center" id="Order-now"> 
-                <h2>Order Here</h2>
-              </div>
-              <h2>Order your pizza here and we will deliver it to you at your door step!</h2>
-              <div class="row">
-                  <div class="col-sm-5">
+  <head er>
+  <h1>John's Pizza palace</h1>
+  <div class="container-fluid order" id="make-order">
+    <div class="order-overlay"> 
+      <div class="controls-top text-center" id="Order-now"> 
+        <h2>Order Here</h2>
+      </div>
+      <h2>Order your pizza here and we will deliver it to you at your door step!</h2>
+      <div class="row">
+        <div class="col-sm-5">
                     <!--**********************this is the major form**********************************************-->
-                    <form action=""> 
-                        <label for="select">Select Your Flavor</label>
-                        <select class="browser-default custom-select custom-select-md mb-3 name">
-                          <option selected value="choose">Choose your flavor</option> 
-                          <option value="Chicken Tikka">Chicken Tikka</option>
-                          <option value="PeriPeri Pizza">PeriPeri Pizza</option>
-                          <option value="Pepperoni Pizza">Pepperoni Pizza</option>
-                          <option value="BBQ Chicken Pizza">BBQ Chicken Pizza</option>
-                          <option value="Sunchoke Pizza">Sunchoke Pizza</option>
-                          <option value="Meat lovers Pizza">Meat lovers Pizza</option>
-                        </select>
-                      <label for="select">Select Size</label>
-                      <select class="browser-default custom-select custom-select-md mb-3" id="size">
-                        <option selected value="0">Select size here</option>
-                        <option value="extra-large">  Extra Large -- sh. 1200</option>
-                        <option value="large">Large -- sh. 1000</option>
-                        <option value="medium">Medium -- sh. 800</option>
-                        <option value="small">Small -- sh. 600</option>
-                      </select>
-                      <label for="crust">Choose your favorite Crust!</label>
-                        <select class="browser-default custom-select custom-select-md mb-3" id="crust">
-                          <option selected value="0">Select your preferred crust!</option>
-                          <option value="Neopolitan">Neopolitan -- sh. 200</option>
-                          <option value="Deeppan">Deeppan -- sh. 180</option>
-                          <option value="Flatbread">Flatbread-- sh. 150</option>
-                        </select>
-                      <label for="Toppings">Select Your Toppings at sh. 50 each</label><br>
-                        <div class="custom-control custom-checkbox custom-control-inline">
-                          <input type="checkbox" class="custom-control-input" id="Sausage" value="Sausage" name="toppings">
-                          <label class="custom-control-label" for="Sausage">Sausage</label>
-                        </div>
-                        <div class="custom-control custom-checkbox custom-control-inline">
-                          <input type="checkbox" class="custom-control-input" id="Bacon" value="Bacon" name="toppings">
-                          <label class="custom-control-label" for="Bacon">Bacon</label>
-                        </div>
-                        <div class="custom-control custom-checkbox custom-control-inline">
-                          <input type="checkbox" class="custom-control-input" id="Black-olives" value="Black olives" name="toppings">
-                          <label class="custom-control-label" for="Black olives">Black olives</label>
-                        </div>
-                        <br><br>
-                      <button type="submit" class="btn btn-orange proceed">Proceed</button>
-                      
-                    </form>
+          <form action=""> 
+            <label for="select">Select Your Flavor</label>
+              <select class="browser-default custom-select custom-select-md mb-3 name">
+              <option value="Chicken Tikka">Chicken Tikka</option>
+              <option value="PeriPeri Pizza">PeriPeri Pizza</option>
+              <option value="Pepperoni Pizza">Pepperoni Pizza</option>
+              <option value="BBQ Chicken Pizza">BBQ Chicken Pizza</option>
+              <option value="Sunchoke Pizza">Sunchoke Pizza</option>
+              <option value="Meat lovers Pizza">Meat lovers Pizza</option>
+            </select>
+            <label for="select">Select Size</label>
+              <select class="browser-default custom-select custom-select-md mb-3" id="size">
+              <option selected value="0">Select size here</option>
+              <option value="extra-large">  Extra Large -- sh. 1200</option>
+              <option value="large">Large -- sh. 1000</option>
+              <option value="medium">Medium -- sh. 800</option>
+              <option value="small">Small -- sh. 600</option>
+            </select>
+            <label for="crust">Choose your favorite Crust!</label>
+              <select class="browser-default custom-select custom-select-md mb-3" id="crust">
+              <option selected value="0">Select your preferred crust!</option>
+              <option value="Neopolitan">Neopolitan -- sh. 200</option>
+              <option value="Deeppan">Deeppan -- sh. 180</option>
+              <option value="Flatbread">Flatbread-- sh. 150</option>
+            </select>
+          <label for="Toppings">Select Your Toppings at sh. 50 each</label><br>
+            <div class="custom-control custom-checkbox custom-control-inline">
+              <input type="checkbox" class="custom-control-input" id="Sausage" value="Sausage" name="toppings">
+              <label class="custom-control-label" for="Sausage">Sausage</label>
+            </div>
+            <div class="custom-control custom-checkbox custom-control-inline">
+              <input type="checkbox" class="custom-control-input" id="Bacon" value="Bacon" name="toppings">
+              <label class="custom-control-label" for="Bacon">Bacon</label>
+            </div>
+            <div class="custom-control custom-checkbox custom-control-inline">
+              <input type="checkbox" class="custom-control-input" id="Mushrooms" value="Mushrooms" name="toppings">
+              <label class="custom-control-label" for="Mushrooms">Mushrooms</label>
+            </div>
+            <br><br>
+          <button type="submit" class="btn btn-orange proceed">Proceed</button>
+          </form>
+        </div>
 
-<!--**********************this is the major form**********************************************-->
-
-                  </div>
-                  <div class="col-sm-7">
-                    <div id="information">
-                      <p>Your order will be processed and delivered within one hour of placing.</p>
-                      <p>Make sure you have the total amout for the order during order delivery delivery.</p>
-                      <p>Incase of any comment of complaint, Please reach out to us as fast as possible.</p>
-                      <p id="regards">Regards, Management</p>
-                    </div>
+        <!--**********************this is the major form**********************************************-->
+          <div class="col-sm-7">
+            <div id="information">
+              <p>Your order will be processed and delivered within one hour of placing.</p>
+              <p>Make sure you have the total amout for the order during order delivery delivery.</p>
+              <p>Incase of any comment of complaint, Please reach out to us as fast as possible.</p>
+              <p id="regards">Regards, Management</p>
+            </div>
                      <!--****************THis was earlier called choise***********-->
                         <!--*****************This area displays what you have ordered*************-->
-                    <div class="choice"> 
-                      <h2>Your Order is:</h2>
-                      <div id="your-orders">
-                        <table class="table table-sm  pizzatable">
-                          <thead>
-                            <tr>
-                              <th scope="col">Name</th>
-                              <th scope="col">Size</th>
-                              <th scope="col">Crust</th>
-                              <th scope="col">Topping</th>
-                              <th scope="col">Total</th>
-                            </tr>
+            <div class="choice"> 
+              <h2>Your Order is:</h2>
+              <div id="your-orders">
+                <table class="table table-sm  pizzatable">
+                  <thead>
+                    <tr>
+                      <th scope="col">Name</th>
+                      <th scope="col">Size</th>
+                      <th scope="col">Crust</th>
+                      <th scope="col">Topping</th>
+                      <th scope="col">Total</th>
+                    </tr>
                           </thead>
                           <tbody id="ordersmade">
                             <tr>
@@ -111,7 +102,7 @@
                         </table>
                         <p id="pizzatotal"></p>
                         <p id="totalbill"></p> 
-                        <p id="addedprice">Delivery cost is ksh. 100</p>
+                        <p id="addedprice">Delivery cost is sh. 150</p>
                         <p id="finallmessage"></p>
                       </div>
                       <button class="btn btn-orange addPizza">Add Pizza</button>
@@ -119,14 +110,14 @@
                       <button class="btn btn-orange deliver">Home delivery?</button>
                     </div>
                     <div class="delivery">
-                        <form action="">
-                          <div class="form-group">
-                            <input type="text" id="name" class="form-control mb-3" placeholder="Name">
-                            <input type="number" id="phone" class="form-control mb-3" placeholder="Ph one Number">
-                            <input type="text" id="location" class="form-control mb-3" placeholder="Location for delivery">
-                            <button class="btn btn-orange" id="final-order">Place Order</button>
-                          </div>
-                        </form>
+                      <form action="">
+                       <div class="form-group">
+                        <input type="text" id="name" class="form-control mb-3" placeholder="Name">
+                        <input type="number" id="phone" class="form-control mb-3" placeholder="Ph one Number">
+                        <input type="text" id="location" class="form-control mb-3" placeholder="Location for delivery">
+                        <button class="btn btn-orange" id="final-order">Place Order</button>
+                        </div>
+                      </form>
                     </div>
                   </div>
               </div>
@@ -134,6 +125,7 @@
           </div>    
           <script src="https://code.jquery.com/jquery-3.6.0.js" 
           integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+          <script src="./js/mdb.min.js"></script> 
           <script src="./js/scripts.js"></script>
 </body>
 </html>
