add styles.css and image bc

--- a/index.html
+++ b/index.html
@@ -14,13 +14,16 @@
 </head>
 <body>
   <head er>
+  <div class="card1">  
+  <img class="card-img-top" src="./Images/5 Outstanding Pizza Places in Chicago You Must Try.jpeg"; opacity:0.1; alt="Card image cap">
+  <div class="card-img-overlay" id="container">
   <h1>John's Pizza palace</h1>
   <div class="container-fluid order" id="make-order">
     <div class="order-overlay"> 
       <div class="controls-top text-center" id="Order-now"> 
         <h2>Order Here</h2>
       </div>
-      <h2>Order your pizza here and we will deliver it to you at your door step!</h2>
+      <h2 id="odyp">Order your pizza here and we will deliver it to you at your door step!</h2>
       <div class="row">
         <div class="col-sm-5">
                     <!--**********************this is the major form**********************************************-->
@@ -66,6 +69,7 @@
           <button type="submit" class="btn btn-orange proceed">Proceed</button>
           </form>
         </div>
+      </div>
 
         <!--**********************this is the major form**********************************************-->
           <div class="col-sm-7">
@@ -76,7 +80,10 @@
               <p id="regards">Regards, Management</p>
             </div>
                      <!--****************THis was earlier called choise***********-->
-                        <!--*****************This area displays what you have ordered*************-->
+
+          </div>
+      </div>
+                        <!--*****************This area displays what you have ordered*************-->        
             <div class="choice"> 
               <h2>Your Order is:</h2>
               <div id="your-orders">
