added good bc image

--- a/index.html
+++ b/index.html
@@ -12,10 +12,8 @@
     <link rel="stylesheet" href="./css/styles.css">
 
 </head>
-<body>
-  <head er>
-  <div class="card1">  
-  <img class="card-img-top" src="./Images/5 Outstanding Pizza Places in Chicago You Must Try.jpeg"; opacity:0.1; alt="Card image cap">
+<body> 
+  <img class="card-img-top" src="./Images/pizza4.jpg"; opacity:0.1; alt="Card image cap">
   <div class="card-img-overlay" id="container">
   <h1>John's Pizza palace</h1>
   <div class="container-fluid order" id="make-order">
@@ -127,9 +125,7 @@
                       </form>
                     </div>
                   </div>
-              </div>
-            </div>
-          </div>    
+              </div>  
           <script src="https://code.jquery.com/jquery-3.6.0.js" 
           integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
           <script src="./js/mdb.min.js"></script> 
